apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'android-apt'

android {
    compileSdkVersion 24
    buildToolsVersion "24.0.2"

    defaultConfig {
        applicationId "de.czyrux.store"
        minSdkVersion 15
        targetSdkVersion 24
        versionCode 1
        versionName "1.0"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }
}

dependencies {

    final SUPPORT_LIBRARY_VERSION = '24.2.1'

    final MOCKITO_VERSION = '1.10.19'
    final JUNIT_VERSION = '4.12'

    compile fileTree(dir: 'libs', include: ['*.jar'])

    // ---- APP DEPENDENCIES

    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"

    compile 'io.reactivex:rxandroid:1.2.1'
    compile 'io.reactivex:rxjava:1.1.8'
    compile 'com.jakewharton.rxrelay:rxrelay:1.1.0'

    compile 'com.jakewharton:butterknife:8.4.0'
    apt 'com.jakewharton:butterknife-compiler:8.4.0'

    compile 'com.squareup.picasso:picasso:2.5.2'

    // ---- UNIT TEST CONFIGURATION
    testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"

    // Added for more collections matchers.
    // Use version 1.0.0.1 with Hamcrest 1.3, version 2.0.0.0 with Hamcrest 2.0
    // https://github.com/hamcrest/hamcrest-junit
    testCompile('org.hamcrest:hamcrest-junit:1.0.0.1') {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }

    testCompile "junit:junit:$JUNIT_VERSION"
}
